# Multi-Agent-System

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: config.py  main.py
app/agents/: base_agent.py  rag_agent.py  researcher_agent.py  reviewer_agent.py  writer_agent.py
app/api/schemas/: __init__.py  requests.py  responses.py
app/graph/: multi_agent_workflow.py
app/middleware/: agent_middleware.py  rate_limiter.py
app/routes/: main_routes.py
app/services/: agent.service.py  agent_service.py
app/utils/: mcp.py  search_rag.py  tools.py
config/: settings.py
tests/: conftest.py  debug_system.py  test_agents.py  test_api.py  test_system.py  test_workflow.py
worker/: celery_app.py
